# ollama-router-claude-code

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
router/: __init__.py  cli.py  config.py  gateway.py  menu.py  proxy.py  rotation.py  session_manager.py  utils.py  verify_router.py
