[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-router"
version = "1.0.0"
description = "A CLI tool to rotate multiple Ollama API keys for uninterrupted Claude Code usage"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ollama Router" }
]
keywords = ["ollama", "router", "cli", "api", "rotation", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ollama-router = "router.cli:app"

[project.urls]
Homepage = "https://github.com/kaunainkaisarwani/ollama-router-claude-code"
Repository = "https://github.com/kaunainkaisarwani/ollama-router-claude-code"
Issues = "https://github.com/kaunainkaisarwani/ollama-router-claude-code/issues"

[tool.hatch.build.targets.wheel]
packages = ["router"]
